--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Celestia Variedades</title>
 </head>
 <body>
-    
+    ***************BIENVENIDOS ****************
+        PRODUCTOS DE ASEO PARA SUS MASCOTAS
 </body>
 </html>
