--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Celestia Variedades</title>
 </head>
 <body>
-    ***************BIENVENIDOS ****************
+
+    
+    <h1>***************BIENVENIDOS ****************</h1>
     <br><br>
         PRODUCTOS DE ASEO PARA SUS MASCOTAS
+
+    
 </body>
 </html>
