1ra pantalla de navegacion con html

--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="En esta pagina podrás adquirír productos de aseo para el hogar y para tu mascota" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celestia Variedades</title>
 </head>
 <body>
-
-    
-    <h1>***************BIENVENIDOS ****************</h1>
-    <br><br>
-        PRODUCTOS DE ASEO PARA SUS MASCOTAS
-
-    
+    <header>
+        <figure class="header-logo" >
+            <img src="./assets/logo.jpeg" alt="logo" width="40px" height="40px">
+        </figure>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="#">Empresa</a></li>
+                <li><a href="#">Clientes</a></li>
+                <li><a href="#">Facturas</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Proveedores</a></li>
+            </ul>
+        </nav>
+    </header>   
 </body>
 </html>
