--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="En esta pagina podrás adquirír productos de aseo para el hogar y para tu mascota" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celestia Variedades</title>
+    <title>Celestia Variedades G29</title>
 </head>
 <body>
     <header>
